Wed Jun  1 09:37:26 2016  NAKAMURA Usaku  <usa@ruby-lang.org>

	* missing/crypt.c (des_setkey): void function never returns any value.

Wed Jun  1 09:16:22 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* crypt.h: separate header file from missing/crypt.c.

	* missing/crypt.c (crypt_r, setkey_r, encrypt_r): add reentrant
	  versions.

Wed Jun  1 02:25:38 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* missing/crypt.c: fix size macros to use configured values
	  for platforms long is larger than 32bit.
	  [ruby-core:75792] [Bug #12446]

Tue May 31 17:28:46 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/optparse.rb (OptionParser::Completion.candidate): get rid of
	  nil as key names.  [ruby-core:75773] [Bug #12438]

	* lib/optparse.rb (OptionParser#make_switch): char class option
	  cannot be NoArgument, default to RequiredArgument.

Tue May 31 00:30:11 2016  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/socket/raddrinfo.c (host_str, port_str): Use StringValueCStr
	  instead of (Safe)StringValue, to detect NUL byte in the string.

Mon May 30 22:02:01 2016  Kazuki Yamaguchi  <k@rhe.jp>

	* ext/openssl/ossl_asn1.c (time_to_time_t): Use NUM2TIMET() instead of
	  NUM2LONG(). time_t may be larger than long.
	  [ruby-core:45552] [Bug #6571]

Mon May 30 21:15:37 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* string.c: Document current behavior for other case mapping methods
	  on String. [ci skip]

Mon May 30 20:00:25 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* string.c: Document current situation for String#downcase. [ci skip]

Mon May 30 18:29:28 2016  Kazuki Yamaguchi  <k@rhe.jp>

	* ext/openssl/ossl_ssl.c (ossl_sslctx_s_alloc): Enable the automatic
	  curve selection for ECDH by calling SSL_CTX_set_ecdh_auto(). With
	  this a TLS server automatically selects a curve which both the client
	  and the server support to use in ECDH. This changes the default
	  behavior but users can still disable ECDH by excluding 'ECDH' cipher